# ChangeLog for sci-physics/herwig++
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*herwig++-2.7.0 (04 Nov 2013)

  04 Nov 2013; Jauhien Piatlicki <piatlicki@gmail.com> +herwig++-2.7.0.ebuild,
  metadata.xml:
  Version bump, c++0x USE added

*herwig++-2.6.3 (11 Mar 2013)

  11 Mar 2013; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  -herwig++-2.6.2.ebuild, -files/herwig++-2.6.2-looptools.patch,
  +herwig++-2.6.3.ebuild, +files/herwig++-2.6.3-looptools.patch:
  version bump

*herwig++-2.6.2 (04 Feb 2013)

  04 Feb 2013; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  -herwig++-2.6.1b.ebuild, -files/herwig++-2.6.1b-looptools.patch,
  +herwig++-2.6.2.ebuild, +files/herwig++-2.6.2-looptools.patch:
  version bump

*herwig++-2.6.1b (08 Nov 2012)

  08 Nov 2012; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  -herwig++-2.6.0.ebuild, -files/herwig++-2.6.0-looptools.patch,
  +herwig++-2.6.1b.ebuild, +files/herwig++-2.6.1b-looptools.patch:
  version bump

*herwig++-2.6.0 (08 Sep 2012)

  08 Sep 2012; Jauhien Piatlicki (jauhien) <piatlicki@gmail.com>
  +herwig++-2.6.0.ebuild, +files/herwig++-2.6.0-looptools.patch, +metadata.xml:
  New Ebuild for bug #433060
