@@ -1,2 +1,1 @@
-DIST Herwig++-2.6.3.tar.bz2 3163127 SHA256 fb61f11cd43cb0d587d02572cbb19882e94f1132eca19c35c0e36816c051ffc4 SHA512 3a37dc5769ecdbb6ce86cc04df9245dcc986bf10fbf1d917742c3c421fe3c4949f40effcfc4fbdb80b8e60fdf15630020e849849e936776702693d7459090ee2 WHIRLPOOL 5682ecb8a944c287ec733b4a5c31a0b7b82a66728dd1f9d6a5b1026fe8b59d07ea52db3b9d92cb1d1eff6a3b3449ce546ce09cf647d57d8ec63a6bd0da1bc03a
 DIST Herwig++-2.7.0.tar.bz2 3365868 SHA256 17403748e7e3d76b0b91633ed5d23957f8eb086f7b833128b1294911dbceca33 SHA512 c59ba24893bd6c5bd02ef86c5e1d1a38b6bd4c59e06d48e54c32748951f752c988717dc88f340a2013db6c359d59a0f19bee42461015f294b9cd67ce5a58d479 WHIRLPOOL 573d8f5abb594e9a2e93152e00921ce19e57279a087f7b5583f61f4383a4bdcbf493bc618c299ccd1cdc319ce1939afab507219304e35d3b959de8a4c58f502c
